Start layout of first section

--- a/index.html
+++ b/index.html
@@ -11,9 +11,23 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="icon" href="images/favicon.png">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,700|Satisfy" rel="stylesheet">
 </head>
 
 <body>
+	<main>
+		<section id="home" class="home">
+			<nav>
+				<h2>Lianne Turnbull</h2>
+				<ul class="nav-bar">
+					<li><a href="#home">home</a></li>
+					<li><a href="#skills">skills</a></li>
+					<li><a href="#portfolio">portfolio</a></li>
+					<li><a href="#contact">contact</a></li>
+				</ul>
+			</nav>
+		</section>
+	</main>
 
   <script src="js/query.min.js"></script>
   <script src="js/script.js"></script>
