Start framework for nav bar

--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
 	<main>
 		<section id="home" class="home">
 			<nav>
-				<h2>Lianne Turnbull</h2>
-				<ul class="nav-bar">
-					<li><a href="#home">home</a></li>
-					<li><a href="#skills">skills</a></li>
-					<li><a href="#portfolio">portfolio</a></li>
-					<li><a href="#contact">contact</a></li>
-				</ul>
+				<div class="nav-title">
+					<h2>Lianne Turnbull</h2>
+				</div>
+				<div class="nav-menu">
+					<ul>
+						<li><a href="#home">home</a></li>
+						<li><a href="#skills">skills</a></li>
+						<li><a href="#portfolio">portfolio</a></li>
+						<li><a href="#contact">contact</a></li>
+					</ul>
+				</div>
 			</nav>
 		</section>
 	</main>
