--- a/index.html
+++ b/index.html
@@ -21,14 +21,12 @@
 				<div class="nav-title">
 					<h2>Lianne Turnbull</h2>
 				</div>
-				<div class="nav-menu">
-					<ul>
-						<li><a href="#home">home</a></li>
-						<li><a href="#skills">skills</a></li>
-						<li><a href="#portfolio">portfolio</a></li>
-						<li><a href="#contact">contact</a></li>
-					</ul>
-				</div>
+				<ul class="nav-menu">
+					<li><a href="#home">home</a></li>
+					<li><a href="#skills">skills</a></li>
+					<li><a href="#portfolio">portfolio</a></li>
+					<li><a href="#contact">contact</a></li>
+				</ul>
 			</nav>
 		</section>
 	</main>
