Switch to mobile first styles.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,63 @@
 					<h2>Lianne Turnbull</h2>
 				</div>
 				<ul class="nav-menu">
-					<li><a href="#home">home</a></li>
+					<li><a href="#home" class="active">home</a></li>
 					<li><a href="#skills">skills</a></li>
 					<li><a href="#portfolio">portfolio</a></li>
 					<li><a href="#contact">contact</a></li>
+				</ul>
+			</nav>
+		</section>
+		<section id="skills" class="skills">
+			<nav>
+				<div class="nav-title">
+					<h2>Skills & Experience</h2>
+				</div>
+				<ul class="nav-menu">
+					<li><a href="#home">home</a></li>
+					<li><a href="#skills" class="active">skills</a></li>
+					<li><a href="#portfolio">portfolio</a></li>
+					<li><a href="#contact">contact</a></li>
+				</ul>
+			</nav>
+			<article>
+				<div class="row">
+					<div class="column two-thirds">
+						<h1>Experience</h1>
+						<p>I am a self taught web developer and designer currently participating in FreeCodeCamp. I am familiar with responsive and mobile first design choices and have experience working with frameworks like Bootstrap. I am also currently learning more about improving workflow using tools such as Gulp, SASS and Git.</p>
+						<p>I also enjoy working in Adobe Illustrator and Sketch and have completed some small projects designing SVG illustrations and animating them using CSS and the GSAP Javascript library.</p>
+						<p>In the past I have also had experience working on online charity events, and have written copy for websites, managed social media accounts and designed posters and images for use in publicising events.</p>
+						<p>My background in history and museum studies has instilled in me a love for research and learning; and I am always on the lookout to put those skills into action. I enjoy researching new concepts and ideas, and discovering new solutions to problems.</p>
+					</div>
+					<div class="column">
+						<h1>Skills</h1>
+					</div>
+				</div>
+			</article>
+		</section>
+		<section id="portfolio" class="portfolio">
+			<nav>
+				<div class="nav-title">
+					<h2>Portfolio</h2>
+				</div>
+				<ul class="nav-menu">
+					<li><a href="#home">home</a></li>
+					<li><a href="#skills">skills</a></li>
+					<li><a href="#portfolio" class="active">portfolio</a></li>
+					<li><a href="#contact">contact</a></li>
+				</ul>
+			</nav>
+		</section>
+		<section id="contact" class="contact">
+			<nav>
+				<div class="nav-title">
+					<h2>Contact</h2>
+				</div>
+				<ul class="nav-menu">
+					<li><a href="#home">home</a></li>
+					<li><a href="#skills">skills</a></li>
+					<li><a href="#portfolio">portfolio</a></li>
+					<li><a href="#contact" class="active">contact</a></li>
 				</ul>
 			</nav>
 		</section>
