Add Skills section, add function to generate margins

--- a/index.html
+++ b/index.html
@@ -52,6 +52,28 @@
 					</div>
 					<div class="column">
 						<h1>Skills</h1>
+						<div class="row">
+							<div class="skills-row">
+								<h3>technical</h3>
+								<div class="button column">html</div>
+								<div class="button column">css</div>
+								<div class="button column">javascript</div>
+								<div class="button column">jQuery</div>
+								<div class="button column">sass</div>
+								<div class="button column">GSAP</div>
+								<div class="button column">bootstrap</div>
+								<div class="button column">git</div>
+								<div class="button column">gulp</div>
+							</div>
+							<div class="skills-row">
+								<h3>design</h3>
+								<div class="button column">illustrator</div>
+								<div class="button column">sketch</div>
+								<div class="button column">photoshop</div>
+								<div class="button column">inDesign</div>
+								<div class="button column">svg</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</article>
