Add Portfolio squares

--- a/index.html
+++ b/index.html
@@ -41,38 +41,36 @@
 					<li><a href="#contact">contact</a></li>
 				</ul>
 			</nav>
-			<article>
-				<div class="row">
-					<div class="column two-thirds">
-						<h1>Experience</h1>
-						<p>I am a self taught web developer and designer currently participating in FreeCodeCamp. I am familiar with responsive and mobile first design choices and have experience working with frameworks like Bootstrap. I am also currently learning more about improving workflow using tools such as Gulp, SASS and Git.</p>
-						<p>I also enjoy working in Adobe Illustrator and Sketch and have completed some small projects designing SVG illustrations and animating them using CSS and the GSAP Javascript library.</p>
-						<p>In the past I have also had experience working on online charity events, and have written copy for websites, managed social media accounts and designed posters and images for use in publicising events.</p>
-						<p>My background in history and museum studies has instilled in me a love for research and learning; and I am always on the lookout to put those skills into action. I enjoy researching new concepts and ideas, and discovering new solutions to problems.</p>
-					</div>
-					<div class="column">
-						<h1>Skills</h1>
-						<div class="row">
-							<div class="skills-row">
-								<h3>technical</h3>
-								<div class="button column">html</div>
-								<div class="button column">css</div>
-								<div class="button column">javascript</div>
-								<div class="button column">jQuery</div>
-								<div class="button column">sass</div>
-								<div class="button column">GSAP</div>
-								<div class="button column">bootstrap</div>
-								<div class="button column">git</div>
-								<div class="button column">gulp</div>
-							</div>
-							<div class="skills-row">
-								<h3>design</h3>
-								<div class="button column">illustrator</div>
-								<div class="button column">sketch</div>
-								<div class="button column">photoshop</div>
-								<div class="button column">inDesign</div>
-								<div class="button column">svg</div>
-							</div>
+			<article class="row">
+				<div class="column two-thirds">
+					<h1>Experience</h1>
+					<p>I am a self taught web developer and designer currently participating in FreeCodeCamp. I am familiar with responsive and mobile first design choices and have experience working with frameworks like Bootstrap. I am also currently learning more about improving workflow using tools such as Gulp, SASS and Git.</p>
+					<p>I also enjoy working in Adobe Illustrator and Sketch and have completed some small projects designing SVG illustrations and animating them using CSS and the GSAP Javascript library.</p>
+					<p>In the past I have also had experience working on online charity events, and have written copy for websites, managed social media accounts and designed posters and images for use in publicising events.</p>
+					<p>My background in history and museum studies has instilled in me a love for research and learning; and I am always on the lookout to put those skills into action. I enjoy researching new concepts and ideas, and discovering new solutions to problems.</p>
+				</div>
+				<div class="column">
+					<h1>Skills</h1>
+					<div class="row">
+						<div class="skills-row">
+							<h3>technical</h3>
+							<div class="button column">html</div>
+							<div class="button column">css</div>
+							<div class="button column">javascript</div>
+							<div class="button column">jQuery</div>
+							<div class="button column">sass</div>
+							<div class="button column">GSAP</div>
+							<div class="button column">bootstrap</div>
+							<div class="button column">git</div>
+							<div class="button column">gulp</div>
+						</div>
+						<div class="skills-row">
+							<h3>design</h3>
+							<div class="button column">illustrator</div>
+							<div class="button column">sketch</div>
+							<div class="button column">photoshop</div>
+							<div class="button column">inDesign</div>
+							<div class="button column">svg</div>
 						</div>
 					</div>
 				</div>
@@ -90,6 +88,16 @@
 					<li><a href="#contact">contact</a></li>
 				</ul>
 			</nav>
+			<article class="row">
+				<div class="portfolio-square">
+				</div>
+				<div class="portfolio-square">
+				</div>
+				<div class="portfolio-square">
+				</div>
+				<div class="portfolio-square">
+				</div>
+			</article>
 		</section>
 		<section id="contact" class="contact">
 			<nav>
@@ -103,6 +111,8 @@
 					<li><a href="#contact" class="active">contact</a></li>
 				</ul>
 			</nav>
+			<article class="row">
+			</article>
 		</section>
 	</main>
 
