Create contact form and style

--- a/index.html
+++ b/index.html
@@ -414,6 +414,23 @@
 				</ul>
 			</nav>
 			<article class="row">
+				<form>
+					<label>Name:</label>
+					<input type="text" name="name" class="text">
+					<label>Email:</label>
+					<input type="email" name="email" class="text">
+					<label>Message:</label>
+					<textarea name="message" class="text"></textarea>
+					<div class="buttons">
+						<input type="submit" name="submit" id="submit" value="submit" class="button">
+						<input type="reset" name="clear" id="clear" value="clear" class="button">
+					</div>
+				</form>
+				<ul class="social-bar">
+					<li><div class="social-btn"></div></li>
+					<li><div class="social-btn"></div></li>
+					<li><div class="social-btn"></div></li>
+				</ul>
 			</article>
 		</section>
 	</main>
