Add Font Awesome and social bar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="icon" href="images/favicon.png">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,700|Satisfy|Material+Icons" rel="stylesheet">
+	<script src="https://use.fontawesome.com/998d3a3642.js"></script>
 </head>
 
 <body>
@@ -423,9 +424,13 @@
 					</div>
 				</form>
 				<ul class="social-bar">
-					<li><div class="social-btn"></div></li>
-					<li><div class="social-btn"></div></li>
-					<li><div class="social-btn"></div></li>
+					<li><a class="social-btn" href="mailto:lianne.turnbull@gmail.com"  target="_blank"><i class="fa fa-envelope-o"></i></a></li>
+					<li><a class="social-btn" href="http://www.twitter.com/xiavn"  target="_blank"><i class="fa fa-twitter"></i></a></li>
+					<li><a class="social-btn" href="https://uk.linkedin.com/in/lianneturnbull" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+					<li><a class="social-btn" href="https://github.com/xiavn" target="_blank"><i class="fa fa-github"></i></a></li>
+					<li><a class="social-btn" href="http://codepen.io/xiavn/" target="_blank"><i class="fa fa-codepen"></i></a></li>
+					<li><a class="social-btn" href="https://www.freecodecamp.com/xiavn" target="_blank"><i class="fa fa-fire"></i></a></li>
+					<li><a class="social-btn" href="https://plus.google.com/u/0/+LianneTurnbull" target="_blank"><i class="fa fa-google-plus"></i></a></li>
 				</ul>
 			</article>
 		</section>
