--- a/index.html
+++ b/index.html
@@ -311,7 +311,24 @@
 						<path d="M126.325 442.196l-10.412 27.224m-31.238-27.224L95.62 469.42m4.807-11.43v10.025m10.146-10.025v10.018" stroke="#57595B" fill="#A0BAD9" opacity=".8"/>
 					</g>
 				</g>
-			</svg>			
+			</svg>
+			<article class="header-content">
+				<div class="header-intro">
+					<h1>Hi, I'm Lianne</h1>
+					<p>A web developer and designer based in Peterborough, UK.</p>
+					<p>I love making responsive designs that look and work great on any device.</p>
+					<p>Want to know more? <a href="#contact">Get in touch!</a></p>
+				</div>
+				<ul class="social-bar header-social">
+					<li><a class="social-btn" href="mailto:lianne.turnbull@gmail.com"  target="_blank"><i class="fa fa-envelope-o"></i></a></li>
+					<li><a class="social-btn" href="http://www.twitter.com/xiavn"  target="_blank"><i class="fa fa-twitter"></i></a></li>
+					<li><a class="social-btn" href="https://uk.linkedin.com/in/lianneturnbull" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+					<li><a class="social-btn" href="https://github.com/xiavn" target="_blank"><i class="fa fa-github"></i></a></li>
+					<li><a class="social-btn" href="http://codepen.io/xiavn/" target="_blank"><i class="fa fa-codepen"></i></a></li>
+					<li><a class="social-btn" href="https://www.freecodecamp.com/xiavn" target="_blank"><i class="fa fa-fire"></i></a></li>
+					<li><a class="social-btn" href="https://plus.google.com/u/0/+LianneTurnbull" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+				</ul>
+			</article>	
 		</section>
 		<section id="skills" class="skills">
 			<nav>
@@ -329,7 +346,7 @@
 				<div class="column two-thirds">
 					<h1>Experience</h1>
 					<p>I am a self taught web developer and designer currently participating in FreeCodeCamp. I am familiar with responsive and mobile first design choices and have experience working with frameworks like Bootstrap. I am also currently learning more about improving workflow using tools such as Gulp, SASS and Git.</p>
-					<p>I also enjoy working in Adobe Illustrator and Sketch and have completed some small projects designing SVG illustrations and animating them using CSS and the GSAP Javascript library.</p>
+					<p>I also enjoy working in Adobe Illustrator and Sketch and have completed some small projects designing SVG illustrations and animating them using CSS and the <a href="http://greensock.com/gsap" target="_blank">GSAP Javascript library.</a></p>
 					<p>In the past I have also had experience working on online charity events, and have written copy for websites, managed social media accounts and designed posters and images for use in publicising events.</p>
 					<p>My background in history and museum studies has instilled in me a love for research and learning; and I am always on the lookout to put those skills into action. I enjoy researching new concepts and ideas, and discovering new solutions to problems.</p>
 				</div>
