Add Formspree instead of php

--- a/index.html
+++ b/index.html
@@ -428,8 +428,7 @@
 				</ul>
 			</nav>
 			<article class="row">
-				<form id="contact-form" method="post" action="mailer.php">
-					<div id="form-messages"></div>
+				<form id="contact-form" method="post" action="https://formspree.io/lianne.turnbull@gmail.com">
 					<label>Name:</label>
 					<input type="text" id="name" name="name" class="text">
 					<label>Email:</label>
