Set up javascript to dynamically create portfolio squares

--- a/index.html
+++ b/index.html
@@ -389,30 +389,7 @@
 					<li><a href="#contact">contact</a></li>
 				</ul>
 			</nav>
-			<article class="row">
-				<div class="portfolio-square">
-					<div class="overlay">
-						<h4>Rumour Generator</h4>
-						<p>Easily expandable generator that produces random rumours for use in storytelling and rpg's.</p>
-						<a class="button">read more</a>
-						<span>regex | javascript</span>
-					</div>
-				</div>
-				<div class="portfolio-square">
-
-				</div>
-				<div class="portfolio-square">
-				</div>
-				<div class="portfolio-square">
-				</div>
-				<div class="portfolio-square">
-				</div>
-				<div class="portfolio-square">
-				</div>
-				<div class="portfolio-square">
-				</div>
-				<div class="portfolio-square">
-				</div>
+			<article class="row" id="portfolio-display">
 			</article>
 		</section>
 		<section id="contact" class="contact">
