--- a/index.html
+++ b/index.html
@@ -390,6 +390,14 @@
 				</ul>
 			</nav>
 			<article class="row" id="portfolio-display">
+			<div class="modal">
+				<div class="close-btn"><i class="fa fa-times"></i></div>
+				<div class="modal-inner">
+					<h1>Rumour Generator</h1>
+					<p>This project was created as part of FreeCodeCamp, the task was to create a random quote generator. I decided I wanted to try and expand on the concept of a quote generator, and instead build something that could be useful when running tabletop roleplaying games to randomly generate rumours that could be given to the players to add flavour and inspire adventure. When creating the generator one of my main goals was to make it modular and easy to expand to allow for a greater variety of generated responses. I utilised Regular Expressions and a series of objects to allow new words to be added in categories that can then be randomly picked and filled into gaps in the core rumour template. This allows you to write a basic rumour and specify specific categories to be used when filling in the blanks - such as ay type of location, or only rural locations, male pronouns or female, and plural forms of animals.</p>
+					<a class='button'>view project</a>
+				</div>
+			</div>
 			</article>
 		</section>
 		<section id="contact" class="contact">
