--- a/index.html
+++ b/index.html
@@ -29,7 +29,33 @@
 					<li><a href="#contact">contact</a></li>
 				</ul>
 			</nav>
-			<svg class="header-svg" viewBox="0 0 960 540" xmlns="http://www.w3.org/2000/svg">
+			<svg class="svg-portrait" viewBox="0 0 57 89" xmlns="http://www.w3.org/2000/svg">
+				<g stroke-width="2" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
+					<g stroke="#57595B" fill="#A0BAD9" opacity=".8">
+						<path d="M11.078 45.932L21.223 72.89M45.922 45.932L36.311 72.89"/>
+					</g>
+					<g transform="translate(18 73)" stroke="#BF8553" fill="#F0B179">
+						<rect width="21" height="15" rx="3"/>
+						<path d="M1 4.529h19.757M4.534 0v13.744M10.534 0v13.744M16.534 0v13.744"/>
+					</g>
+					<g stroke="#814B4B" transform="translate(1 1)">
+						<rect fill="#C56666" x="19.757" y="53.39" width="15.485" height="6.872" rx="3"/>
+						<path d="M27.5 54.447c15.188 0 27.5-12.188 27.5-27.224C55 12.188 42.688 0 27.5 0S0 12.188 0 27.223C0 42.26 12.312 54.447 27.5 54.447z" fill="#C56666"/>
+						<g fill="#C56666">
+							<path d="M5.997 10.515h43.006M3.999 13.63H51M9.074 7.4h36.848"/>
+						</g>
+						<g fill="#C56666">
+							<path d="M6 43.932h43M4 40.817h47M9.074 47.046h36.848"/>
+						</g>
+						<path d="M49.868 27.223C49.868 12.188 39.9 0 27.604 0S5.34 12.188 5.34 27.223c0 15.036 9.968 27.224 22.264 27.224s22.264-12.188 22.264-27.224z" opacity=".297"/>
+						<path d="M27.424 0c-6.593 0-11.939 12.188-11.939 27.223 0 15.036 5.346 27.224 11.939 27.224s11.939-12.188 11.939-27.224C39.363 12.188 34.017 0 27.424 0zM27.5.264v52.864" opacity=".297"/>
+					</g>
+					<g stroke="#57595B" fill="#A0BAD9" opacity=".8">
+						<path d="M49.325 46.196L38.913 73.42M7.675 46.196L18.62 73.42M23.427 61.99v10.025M33.573 61.99v10.018"/>
+					</g>
+				</g>
+			</svg>
+			<svg class="svg-landscape" viewBox="0 0 960 540" xmlns="http://www.w3.org/2000/svg">
 				<g fill="none" fill-rule="evenodd">
 					<g stroke-linecap="round" stroke-linejoin="round">
 						<path d="M169.5 200.12c6.572 0 33.5-45.12 33.5-45.12h-67s26.928 45.12 33.5 45.12z" stroke="#A39180" stroke-width="2" fill="#C3A68B"/>
