--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<li><a href="#contact">contact</a></li>
 				</ul>
 			</nav>
-			<svg class="svg-portrait" viewBox="0 0 57 89" xmlns="http://www.w3.org/2000/svg">
+			<svg class="svg-portrait" viewBox="0 0 57 89" xmlns="http://www.w3.org/2000/svg" id="balloon">
 				<g stroke-width="2" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
 					<g stroke="#57595B" fill="#A0BAD9" opacity=".8">
 						<path d="M11.078 45.932L21.223 72.89M45.922 45.932L36.311 72.89"/>
@@ -322,7 +322,7 @@
 						<path d="M384.969 380.5h4.05" stroke="#B99595" fill="#D8AEAE"/>
 						<path d="M383.98 381.5h6.045" stroke="#B99595" stroke-width="2" fill="#D8AEAE" opacity=".6"/>
 					</g>
-					<g stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+					<g stroke-width="2" stroke-linecap="round" stroke-linejoin="round" id="balloon">
 						<path d="M88.078 441.932l10.145 26.959m24.699-26.959l-9.611 26.959" stroke="#57595B" fill="#A0BAD9" opacity=".8"/>
 						<g transform="translate(95 469)" stroke="#BF8553" fill="#F0B179">
 							<rect width="21" height="15" rx="3"/>
@@ -463,6 +463,7 @@
 
 	<script src="js/query.min.js"></script>
 	<script src="js/script.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/TweenMax.min.js"></script>
 </body>
 
 </html>
