--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<li><a href="#contact">contact</a></li>
 				</ul>
 			</nav>
-			<svg class="svg-portrait" viewBox="0 0 57 89" xmlns="http://www.w3.org/2000/svg" id="balloon">
+			<svg class="svg-portrait balloon" viewBox="0 0 57 89" xmlns="http://www.w3.org/2000/svg">
 				<g stroke-width="2" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
 					<g stroke="#57595B" fill="#A0BAD9" opacity=".8">
 						<path d="M11.078 45.932L21.223 72.89M45.922 45.932L36.311 72.89"/>
@@ -57,6 +57,60 @@
 			</svg>
 			<svg class="svg-landscape" viewBox="0 0 960 540" xmlns="http://www.w3.org/2000/svg">
 				<g fill="none" fill-rule="evenodd">
+					<g stroke-linecap="round" stroke-linejoin="round" id="small-bottom-island">
+						<g stroke="#A39180">
+							<path d="M358 455c6.474 0 33-46 33-46h-66s26.526 46 33 46z" stroke-width="2" fill="#C3A68B"/>
+							<path d="M368.957 451.879c1.953 0 9.956-13.879 9.956-13.879H359s8.003 13.879 9.957 13.879zm2.844-33.083c-2.767 4.22-5.696 8.204-6.888 8.204C362.38 427 352 409 352 409h55.9s-17.242 26-21.45 26c-2.453 0-9.335-8.835-14.649-16.204zM331.217 435c3.378 0 17.218-24 17.218-24H314s13.84 24 17.217 24z" stroke-width="2" fill="#C3A68B"/>
+							<path d="M347.5 437.5l9 12m0-7l2 3m8-1l3 4m-20-29l10 13m12-6l3 4m-12-11l2 3m18 4l4 5m-8-15l8 9m-52-5l-3 11m-8-12l3 5"/>
+						</g>
+						<g stroke="#A39180" fill="#A39180" opacity=".598">
+							<path d="M377.606 430.95a472.5 472.5 0 0 0 1.584-2.483c-2.427-2.927-5.059-6.44-7.389-9.671-2.767 4.22-5.696 8.204-6.888 8.204-2.281 0-10.923-14.593-12.622-17.5H352a1.5 1.5 0 0 0-1.3 2.25l.457.782a242.003 242.003 0 0 0 5.09 8.283c.423.654.837 1.283 1.24 1.884 3.556 5.31 5.631 7.801 7.426 7.801 1.89 0 4.189-2.853 8.143-8.882l-2.471.055c2.638 3.659 4.973 6.766 7.02 9.276zm-40.516-2.043c.488.77.983 1.543 1.482 2.319.158-.101.3-.235.417-.402.55-.783 1.123-1.619 1.715-2.503.536-.8 1.086-1.637 1.648-2.506a292.638 292.638 0 0 0 5.154-8.293 322.174 322.174 0 0 0 2.228-3.773 1.5 1.5 0 0 0-1.3-2.249h-.29c-1.284 2.203-6.59 11.207-11.055 17.407z"/>
+							<path d="M407.51 409.583c-.552.823-1.658 2.46-3.093 4.524-3.991 1.554-8.585 2.468-13.75 2.468-6.016 0-11.246-1.239-15.64-3.272l1.062-.14c-4.099 3.429-8.92 5.49-14.421 5.49-6.53 0-12.08-2.114-15.759-5.6l-.03-.03.69-.723.597.802c-4.573 3.401-10.207 5.552-16.834 5.552-5.16 0-9.73-.95-13.346-2.627a309.538 309.538 0 0 1-2.9-4.878c.12.093.243.184.369.274 3.289 2.35 8.688 4.23 15.877 4.23a27.03 27.03 0 0 0 16.237-5.353l.028.027c3.122 2.96 8.248 5.327 15.07 5.327 5.986 0 10.625-2.618 13.78-5.258 3.323 1.537 8.455 3.18 15.22 3.18 7.989 0 13.7-2.29 16.844-3.993zm-30.715 31.967c-.929.487-2.058.796-3.37.796-2.655 0-4.539-1.813-5.554-3.123-.989.786-2.609 1.702-4.795 1.702a7.486 7.486 0 0 1-2.622-.468c.68 1.128 1.542 2.533 2.46 3.967l.162.001c2.244 0 4.164-.783 5.729-2.028l-2.12-.255c1.72 2.22 3.958 3.704 6.74 3.704.224 0 .446-.008.665-.023.963-1.46 1.91-2.972 2.705-4.273z"/>
+						</g>
+						<path d="M408.385 409.087a3.628 3.628 0 0 0 1.817-1.212c.089-.068.134-.106.134-.106h-.052a3.614 3.614 0 0 0-2.894-5.77l-93.78.001a3.614 3.614 0 1 0-2.011 6.613c.63.834 1.582 1.9 2.856 2.81 3.289 2.35 8.688 4.23 15.877 4.23a27.03 27.03 0 0 0 16.237-5.353l.028.027c3.122 2.96 8.248 5.327 15.07 5.327 5.986 0 10.625-2.618 13.78-5.258 3.323 1.537 8.455 3.18 15.22 3.18 8.796 0 14.83-2.776 17.718-4.489zm-51.125 29.026a1.32 1.32 0 0 1-.26-.79c0-.736.59-1.323 1.32-1.323h20.36c.728 0 1.32.592 1.32 1.323 0 .251-.069.485-.188.684-.118.324-.517 1.33-1.201 2.117-1.075 1.234-2.839 2.222-5.187 2.222-2.654 0-4.538-1.813-5.553-3.123-.989.786-2.609 1.702-4.795 1.702-3.832 0-5.925-2.812-5.925-2.812h.11z" stroke="#84AA58" stroke-width="2" fill="#B8E986"/>
+						<g stroke-width="2">
+							<g transform="translate(356 407)">
+								<path stroke="#A18873" fill="#C0A791" d="M8.92 20.695h3.2V29h-3.2z"/>
+								<ellipse stroke="#859B6C" fill="#ABCC85" cx="10.5" cy="10.662" rx="10.5" ry="10.662"/>
+							</g>
+							<g transform="translate(367 373)">
+								<path stroke="#A18873" fill="#C0A791" d="M8.92 20.695h3.2V29h-3.2z"/>
+								<ellipse stroke="#859B6C" fill="#ABCC85" cx="10.5" cy="10.662" rx="10.5" ry="10.662"/>
+							</g>
+							<g transform="translate(314 347)">
+								<path stroke="#A18873" fill="#C0A791" d="M18.033 39.249h4.01V55h-4.01z"/>
+								<ellipse stroke="#859B6C" fill="#ABCC85" cx="20" cy="20.221" rx="20" ry="20.221"/>
+							</g>
+							<g transform="translate(340 359)">
+								<path stroke="#A18873" fill="#C0A791" d="M13.976 30.686h3.107V43h-3.107z"/>
+								<ellipse stroke="#859B6C" fill="#ABCC85" cx="15.5" cy="15.809" rx="15.5" ry="15.809"/>
+							</g>
+							<g transform="translate(384 357)">
+								<path stroke="#A18873" fill="#C0A791" d="M15.017 32.686h5.024V45h-5.024z"/>
+								<ellipse stroke="#859B6C" fill="#ABCC85" cx="17.461" cy="17.809" rx="17.461" ry="17.809"/>
+							</g>
+						</g>
+						<path stroke="#ADAFAB" stroke-width="2" fill="#CBD0C6" d="M382 392h10v10h-10zm1.5-.5v-5.523m7 5.523v-5.523"/>
+						<path stroke="#B99595" stroke-width="2" fill="#D8AEAE" d="M387 376l7 11h-14z"/>
+						<path d="M382.5 383.5h8.515" stroke="#B99595" fill="#D8AEAE"/>
+						<path d="M381.986 384.5h10.026" stroke="#B99595" stroke-width="2" fill="#D8AEAE" opacity=".6"/>
+						<path d="M384.969 380.5h4.05" stroke="#B99595" fill="#D8AEAE"/>
+						<path d="M383.98 381.5h6.045" stroke="#B99595" stroke-width="2" fill="#D8AEAE" opacity=".6"/>
+					</g>
+					<g stroke-width="2" stroke-linecap="round" stroke-linejoin="round" id="balloon" class="balloon">
+						<path d="M88.078 441.932l10.145 26.959m24.699-26.959l-9.611 26.959" stroke="#57595B" fill="#A0BAD9" opacity=".8"/>
+						<g transform="translate(95 469)" stroke="#BF8553" fill="#F0B179">
+							<rect width="21" height="15" rx="3"/>
+							<path d="M1 4.529h19.757M4.534 0v13.744m6-13.744v13.744m6-13.744v13.744"/>
+						</g>
+						<g stroke="#814B4B" transform="translate(78 397)">
+							<rect fill="#C56666" x="19.757" y="53.39" width="15.485" height="6.872" rx="3"/>
+							<path d="M27.5 54.447c15.188 0 27.5-12.188 27.5-27.224C55 12.188 42.688 0 27.5 0S0 12.188 0 27.223C0 42.26 12.312 54.447 27.5 54.447zM5.997 10.515h43.006M3.999 13.63H51M9.074 7.4h36.848M6 43.932h43M4 40.817h47M9.074 47.046h36.848" fill="#C56666"/>
+							<path d="M49.868 27.223C49.868 12.188 39.9 0 27.604 0S5.34 12.188 5.34 27.223c0 15.036 9.968 27.224 22.264 27.224s22.264-12.188 22.264-27.224z" opacity=".297"/>
+							<path d="M27.424 0c-6.593 0-11.939 12.188-11.939 27.223 0 15.036 5.346 27.224 11.939 27.224s11.939-12.188 11.939-27.224C39.363 12.188 34.017 0 27.424 0zm.076.264v52.864" opacity=".297"/>
+						</g>
+						<path d="M126.325 442.196l-10.412 27.224m-31.238-27.224L95.62 469.42m4.807-11.43v10.025m10.146-10.025v10.018" stroke="#57595B" fill="#A0BAD9" opacity=".8"/>
+					</g>
 					<g stroke-linecap="round" stroke-linejoin="round">
 						<path d="M169.5 200.12c6.572 0 33.5-45.12 33.5-45.12h-67s26.928 45.12 33.5 45.12z" stroke="#A39180" stroke-width="2" fill="#C3A68B"/>
 						<path d="M132 195.56c2.747 0 14-45.118 14-45.118h-28s11.253 45.119 14 45.119zm54.5-7.09c4.414 0 22.5-38.47 22.5-38.47h-45s18.086 38.47 22.5 38.47z" stroke="#A39180" stroke-width="2" fill="#C3A68B"/>
@@ -151,12 +205,26 @@
 						<path d="M70.5 115.5l3-11m-26-4l7-9m-27 4l-2-2m3-1l-5-9m44.82 35.663l-.82-4.663m23-5l-12-14m33-7l5-6m13 5v-1m-2-1l-1-3m-30 3l-2-2m4 2l1-1m-18 10l-3-3" stroke="#A39180" stroke-linecap="round" stroke-linejoin="round"/>
 						<path d="M44.502 422.302c0-5.69-5.809-10.302-12.974-10.302s-12.974 4.613-12.974 10.302c0 5.69 5.809 4.638 12.974 4.638s12.974 1.052 12.974-4.638z" stroke="#ADAFAB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="#CBD0C6"/>
 						<path d="M42.302 427.04c4.586 0 8.303.848 8.303-3.738a8.302 8.302 0 1 0-16.605 0c0 4.586 3.717 3.738 8.302 3.738z" stroke="#ADAFAB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="#CBD0C6"/>
-						<g transform="translate(29 55)" stroke="#6C86A2" stroke-width="2" fill="#A0BAD9" stroke-linecap="round" opacity=".8" stroke-linejoin="round">
+						<g transform="translate(29 55)" stroke="#6C86A2" stroke-width="2" fill="#A0BAD9" stroke-linecap="round" opacity=".8" stroke-linejoin="round" id="waterfall">
 							<rect width="15" height="372" rx="3"/>
-							<path d="M3.5 12.67v53.218m8-8.118v11.156m0 17.739v34.97M9.5 5.068v43.586m-3 64.872v97.31m-1-133.011V92.24m6 101.362v81.091m0 23.312v70.954m-8-66.899v51.717m4-16.245v26.381m-4-142.943v41.56m3-8.117v46.636m6-152.801v29.138"/>
+							<g id="water-lines">
+							<path d="M3.5,12.6702997 L3.5,65.8879714" class="water-lines" id="1"/>
+                        <path d="M11.5,57.7708089 L11.5,68.9264305" id="2" class="water-lines"/>
+                        <path d="M11.5,86.6648501 L11.5,121.634877" id="3" class="water-lines"></path>
+                        <path d="M9.5,5.06811989 L9.5,48.653951" id="4" class="water-lines"></path>
+                        <path d="M6.5,113.525886 L6.5,210.83511" id="5" class="water-lines"></path>
+                        <path d="M5.5,77.8245871 L5.5,92.2411044" id="6" class="water-lines"></path>
+                        <path d="M11.5,193.60218 L11.5,274.69342" id="7" class="water-lines"></path>
+                        <path d="M11.5,298.00545 L11.5,368.959128" id="8" class="water-lines"></path>
+                        <path d="M3.5,302.059946 L3.5,353.777122" id="9" class="water-lines"></path>
+                        <path d="M7.5,337.531916 L7.5,363.913361" id="10" class="water-lines"></path>
+                        <path d="M3.5,220.970027 L3.5,262.529933" id="11" class="water-lines"></path>
+                        <path d="M6.5,254.412581 L6.5,301.049075" id="12" class="water-lines"></path>
+                        <path d="M12.5,148.24805 L12.5,177.385519" id="13" class="water-lines"></path>
+                        </g>
 						</g>
 						<rect stroke="#6C86A2" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="#A0BAD9" opacity=".8" x="21" y="421" width="27" height="5" rx="2.5"/>
-						<g transform="translate(26 418)" fill="#D6E1EB" opacity=".8">
+						<g transform="translate(26 418)" fill="#D6E1EB" opacity=".8" id="bubble1">
 							<circle cx="4.5" cy=".5" r=".5"/>
 							<circle cx="3.5" cy="4.5" r=".5"/>
 							<circle cx="1" cy="2" r="1"/>
@@ -169,7 +237,7 @@
 							<circle cx="14.5" cy=".5" r=".5"/>
 							<circle cx="13.5" cy="3.5" r=".5"/>
 						</g>
-						<g opacity=".8" transform="translate(26 416)" fill="#B5CEE4">
+						<g id="bubble2" opacity=".8" transform="translate(26 416)" fill="#B5CEE4">
 							<circle transform="rotate(-75 5.5 4.5)" cx="5.5" cy="4.5" r=".5"/>
 							<circle transform="rotate(-75 2 5)" cx="2" cy="5" r="1"/>
 							<circle transform="rotate(-75 10 5)" cx="10" cy="5" r="1"/>
@@ -241,7 +309,7 @@
 							<path d="M814.509 77.579h3.634L811 62l-7.143 15.579h3.634l-6.015 11.684h19.048l-6.015-11.684z" stroke="#6F7C60" fill="#88947B"/>
 						</g>
 					</g>
-					<g stroke-linecap="round" stroke-linejoin="round">
+					<g stroke-linecap="round" stroke-linejoin="round" id="large-bottom-island">
 						<g stroke="#A39180">
 							<path d="M638 519.424c5.69 0 29-40.424 29-40.424h-58s23.31 40.424 29 40.424z" stroke-width="2" fill="#C3A68B"/>
 							<path d="M616 522c6.474 0 33-46 33-46h-66s26.526 46 33 46zm59-22c6.474 0 33-40 33-40h-66s26.526 40 33 40z" stroke-width="2" fill="#C3A68B"/>
@@ -283,58 +351,6 @@
 							<path d="M668.872 453.08c-1.554 0-2.814.288-2.814-1.266a2.814 2.814 0 1 1 5.628 0c0 1.554-1.26 1.267-2.814 1.267zm3.013-1.58c0-1.933 2.02-3.5 4.512-3.5 2.493 0 4.513 1.567 4.513 3.5s-2.02 1.576-4.513 1.576c-2.492 0-4.512.357-4.512-1.576zm14.987 1.586c-1.175 0-2.128.217-2.128-.958a2.128 2.128 0 0 1 4.256 0c0 1.175-.953.958-2.128.958zm-53.988 0c-1.175 0-2.128.217-2.128-.958a2.128 2.128 0 0 1 4.256 0c0 1.175-.953.958-2.128.958z"/>
 						</g>
 						<path d="M618.545 450.07l-.589 2.81-2.854-2.11m79.193.482l1.891 1.395 1.23-2.173m-102.551.614l-2.36 1.957.003-3.996m-.81 3.093L589 451" stroke="#84AA58" stroke-width="2"/>
-						<g stroke="#A39180">
-							<path d="M358 455c6.474 0 33-46 33-46h-66s26.526 46 33 46z" stroke-width="2" fill="#C3A68B"/>
-							<path d="M368.957 451.879c1.953 0 9.956-13.879 9.956-13.879H359s8.003 13.879 9.957 13.879zm2.844-33.083c-2.767 4.22-5.696 8.204-6.888 8.204C362.38 427 352 409 352 409h55.9s-17.242 26-21.45 26c-2.453 0-9.335-8.835-14.649-16.204zM331.217 435c3.378 0 17.218-24 17.218-24H314s13.84 24 17.217 24z" stroke-width="2" fill="#C3A68B"/>
-							<path d="M347.5 437.5l9 12m0-7l2 3m8-1l3 4m-20-29l10 13m12-6l3 4m-12-11l2 3m18 4l4 5m-8-15l8 9m-52-5l-3 11m-8-12l3 5"/>
-						</g>
-						<g stroke="#A39180" fill="#A39180" opacity=".598">
-							<path d="M377.606 430.95a472.5 472.5 0 0 0 1.584-2.483c-2.427-2.927-5.059-6.44-7.389-9.671-2.767 4.22-5.696 8.204-6.888 8.204-2.281 0-10.923-14.593-12.622-17.5H352a1.5 1.5 0 0 0-1.3 2.25l.457.782a242.003 242.003 0 0 0 5.09 8.283c.423.654.837 1.283 1.24 1.884 3.556 5.31 5.631 7.801 7.426 7.801 1.89 0 4.189-2.853 8.143-8.882l-2.471.055c2.638 3.659 4.973 6.766 7.02 9.276zm-40.516-2.043c.488.77.983 1.543 1.482 2.319.158-.101.3-.235.417-.402.55-.783 1.123-1.619 1.715-2.503.536-.8 1.086-1.637 1.648-2.506a292.638 292.638 0 0 0 5.154-8.293 322.174 322.174 0 0 0 2.228-3.773 1.5 1.5 0 0 0-1.3-2.249h-.29c-1.284 2.203-6.59 11.207-11.055 17.407z"/>
-							<path d="M407.51 409.583c-.552.823-1.658 2.46-3.093 4.524-3.991 1.554-8.585 2.468-13.75 2.468-6.016 0-11.246-1.239-15.64-3.272l1.062-.14c-4.099 3.429-8.92 5.49-14.421 5.49-6.53 0-12.08-2.114-15.759-5.6l-.03-.03.69-.723.597.802c-4.573 3.401-10.207 5.552-16.834 5.552-5.16 0-9.73-.95-13.346-2.627a309.538 309.538 0 0 1-2.9-4.878c.12.093.243.184.369.274 3.289 2.35 8.688 4.23 15.877 4.23a27.03 27.03 0 0 0 16.237-5.353l.028.027c3.122 2.96 8.248 5.327 15.07 5.327 5.986 0 10.625-2.618 13.78-5.258 3.323 1.537 8.455 3.18 15.22 3.18 7.989 0 13.7-2.29 16.844-3.993zm-30.715 31.967c-.929.487-2.058.796-3.37.796-2.655 0-4.539-1.813-5.554-3.123-.989.786-2.609 1.702-4.795 1.702a7.486 7.486 0 0 1-2.622-.468c.68 1.128 1.542 2.533 2.46 3.967l.162.001c2.244 0 4.164-.783 5.729-2.028l-2.12-.255c1.72 2.22 3.958 3.704 6.74 3.704.224 0 .446-.008.665-.023.963-1.46 1.91-2.972 2.705-4.273z"/>
-						</g>
-						<path d="M408.385 409.087a3.628 3.628 0 0 0 1.817-1.212c.089-.068.134-.106.134-.106h-.052a3.614 3.614 0 0 0-2.894-5.77l-93.78.001a3.614 3.614 0 1 0-2.011 6.613c.63.834 1.582 1.9 2.856 2.81 3.289 2.35 8.688 4.23 15.877 4.23a27.03 27.03 0 0 0 16.237-5.353l.028.027c3.122 2.96 8.248 5.327 15.07 5.327 5.986 0 10.625-2.618 13.78-5.258 3.323 1.537 8.455 3.18 15.22 3.18 8.796 0 14.83-2.776 17.718-4.489zm-51.125 29.026a1.32 1.32 0 0 1-.26-.79c0-.736.59-1.323 1.32-1.323h20.36c.728 0 1.32.592 1.32 1.323 0 .251-.069.485-.188.684-.118.324-.517 1.33-1.201 2.117-1.075 1.234-2.839 2.222-5.187 2.222-2.654 0-4.538-1.813-5.553-3.123-.989.786-2.609 1.702-4.795 1.702-3.832 0-5.925-2.812-5.925-2.812h.11z" stroke="#84AA58" stroke-width="2" fill="#B8E986"/>
-						<g stroke-width="2">
-							<g transform="translate(356 407)">
-								<path stroke="#A18873" fill="#C0A791" d="M8.92 20.695h3.2V29h-3.2z"/>
-								<ellipse stroke="#859B6C" fill="#ABCC85" cx="10.5" cy="10.662" rx="10.5" ry="10.662"/>
-							</g>
-							<g transform="translate(367 373)">
-								<path stroke="#A18873" fill="#C0A791" d="M8.92 20.695h3.2V29h-3.2z"/>
-								<ellipse stroke="#859B6C" fill="#ABCC85" cx="10.5" cy="10.662" rx="10.5" ry="10.662"/>
-							</g>
-							<g transform="translate(314 347)">
-								<path stroke="#A18873" fill="#C0A791" d="M18.033 39.249h4.01V55h-4.01z"/>
-								<ellipse stroke="#859B6C" fill="#ABCC85" cx="20" cy="20.221" rx="20" ry="20.221"/>
-							</g>
-							<g transform="translate(340 359)">
-								<path stroke="#A18873" fill="#C0A791" d="M13.976 30.686h3.107V43h-3.107z"/>
-								<ellipse stroke="#859B6C" fill="#ABCC85" cx="15.5" cy="15.809" rx="15.5" ry="15.809"/>
-							</g>
-							<g transform="translate(384 357)">
-								<path stroke="#A18873" fill="#C0A791" d="M15.017 32.686h5.024V45h-5.024z"/>
-								<ellipse stroke="#859B6C" fill="#ABCC85" cx="17.461" cy="17.809" rx="17.461" ry="17.809"/>
-							</g>
-						</g>
-						<path stroke="#ADAFAB" stroke-width="2" fill="#CBD0C6" d="M382 392h10v10h-10zm1.5-.5v-5.523m7 5.523v-5.523"/>
-						<path stroke="#B99595" stroke-width="2" fill="#D8AEAE" d="M387 376l7 11h-14z"/>
-						<path d="M382.5 383.5h8.515" stroke="#B99595" fill="#D8AEAE"/>
-						<path d="M381.986 384.5h10.026" stroke="#B99595" stroke-width="2" fill="#D8AEAE" opacity=".6"/>
-						<path d="M384.969 380.5h4.05" stroke="#B99595" fill="#D8AEAE"/>
-						<path d="M383.98 381.5h6.045" stroke="#B99595" stroke-width="2" fill="#D8AEAE" opacity=".6"/>
-					</g>
-					<g stroke-width="2" stroke-linecap="round" stroke-linejoin="round" id="balloon">
-						<path d="M88.078 441.932l10.145 26.959m24.699-26.959l-9.611 26.959" stroke="#57595B" fill="#A0BAD9" opacity=".8"/>
-						<g transform="translate(95 469)" stroke="#BF8553" fill="#F0B179">
-							<rect width="21" height="15" rx="3"/>
-							<path d="M1 4.529h19.757M4.534 0v13.744m6-13.744v13.744m6-13.744v13.744"/>
-						</g>
-						<g stroke="#814B4B" transform="translate(78 397)">
-							<rect fill="#C56666" x="19.757" y="53.39" width="15.485" height="6.872" rx="3"/>
-							<path d="M27.5 54.447c15.188 0 27.5-12.188 27.5-27.224C55 12.188 42.688 0 27.5 0S0 12.188 0 27.223C0 42.26 12.312 54.447 27.5 54.447zM5.997 10.515h43.006M3.999 13.63H51M9.074 7.4h36.848M6 43.932h43M4 40.817h47M9.074 47.046h36.848" fill="#C56666"/>
-							<path d="M49.868 27.223C49.868 12.188 39.9 0 27.604 0S5.34 12.188 5.34 27.223c0 15.036 9.968 27.224 22.264 27.224s22.264-12.188 22.264-27.224z" opacity=".297"/>
-							<path d="M27.424 0c-6.593 0-11.939 12.188-11.939 27.223 0 15.036 5.346 27.224 11.939 27.224s11.939-12.188 11.939-27.224C39.363 12.188 34.017 0 27.424 0zm.076.264v52.864" opacity=".297"/>
-						</g>
-						<path d="M126.325 442.196l-10.412 27.224m-31.238-27.224L95.62 469.42m4.807-11.43v10.025m10.146-10.025v10.018" stroke="#57595B" fill="#A0BAD9" opacity=".8"/>
 					</g>
 				</g>
 			</svg>
